fix(java:S6204): replace Collectors.toList() with Stream.toList() in OrdineDAODemo
Updated getOrdiniByCliente() and getOrdiniByStato() methods.
Removed now-unused Collectors import.